frontend/test/should_fail/disallow_action_package_declaration_of_builtin_File_package.grg
package File
{
}

rule r
{
//	if { File::import("foo.grs") != this; }
	modify {
	---
		eval {
//			File::export("bar.grs");
		}
	}
}
